k8s/malicious.yml
apiVersion: v1
kind: Pod
metadata:
  name: malicious
  namespace: mallory
spec:
  containers:
    - name: main
      image: phdays-2025-demo.test/malicious:latest
      imagePullPolicy: Never
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        capabilities:
          drop:
            - ALL
          add:
            # required
            - NET_RAW  # tcpdump, arpspoof, IP spoofing using raw sockets

            # optional
            - NET_ADMIN  # IP spoofing using /usr/sbin/ip utility
            - SETUID  # tcpdump changes its UID/GID when running as root
            - SETGID  # see tcpdump(1) man page, "--relinquish-privileges" option
  hostNetwork: true
  nodeName: worker-mallory
