k8s/workload.yml
apiVersion: v1
kind: Namespace
metadata:
  name: alice
---
apiVersion: v1
kind: Pod
metadata:
  name: private-app-client
  namespace: alice
  labels:
    app.kubernetes.io/name: private-app-client
spec:
  containers:
    - name: main
      image: wbitt/network-multitool:alpine-extra
      volumeMounts:
        - name: auth
          readOnly: true
          mountPath: /root
  volumes:
    - name: auth
      secret:
        secretName: private-app-client-auth
  nodeName: worker-alice-1
---
apiVersion: v1
kind: Pod
metadata:
  name: private-app-server
  namespace: alice
  labels:
    app.kubernetes.io/name: private-app-server
spec:
  containers:
    - name: main
      image: nginx:1.27.4-alpine
      volumeMounts:
        - name: config
          readOnly: true
          mountPath: /etc/nginx/conf.d
        - name: auth
          readOnly: true
          mountPath: /etc/nginx/auth
        - name: web-root
          readOnly: true
          mountPath: /usr/share/nginx/html
      ports:
        - name: http
          protocol: TCP
          containerPort: 80
  volumes:
    - name: config
      configMap:
        name: private-app-server-config
    - name: auth
      secret:
        secretName: private-app-server-auth
    - name: web-root
      secret:
        secretName: private-app-server-web-root
  nodeName: worker-alice-2
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: alice
spec:
  selector:
    app.kubernetes.io/name: private-app-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Namespace
metadata:
  name: mallory
---
apiVersion: v1
kind: Pod
metadata:
  name: network-multitool
  namespace: mallory
spec:
  containers:
    - name: main
      image: wbitt/network-multitool:alpine-extra
  nodeName: worker-mallory
